@@ -1,4 +1,5 @@
 ParamHelpers_1.10:
+- adapt to irace 2.1 API changes
 - new functions
 -- getRequirements
 
